<resources>
    <string name="generic_text">%s</string>

    <string name="app_name">SCP-001</string>

    <string name="key_auth_access_info">auth-access-info</string>
    <string name="key_auth_access_token">auth-access-token</string>
    <string name="key_auth_refresh_token">auth-refresh-token</string>

    <string name="layout_edit_text_edit_hint">name</string>
    <string name="layout_edit_text_nickname_hint">name</string>
    <string name="layout_edit_text_username_hint">username</string>
    <string name="layout_edit_text_email_hint">email</string>
    <string name="layout_edit_text_password_hint">password</string>
    <string name="layout_edit_text_search_hint">search</string>

    <string name="fragment_login_text_view_login_hint">ACCESS RESTRICTED</string>
    <string name="fragment_login_button_forgot_password_text">Lost access card?</string>
    <string name="fragment_login_text_view_register_hint">Don\'t have an access card?</string>
    <string name="fragment_login_button_register_text">Register</string>
    <string name="fragment_login_button_login_text">Login</string>

    <string name="fragment_register_text_view_register_hint">AUTHORIZED PERSONNEL</string>
    <string name="fragment_register_text_view_login_hint">Already have an access card?</string>
    <string name="fragment_register_button_terms_text">By registering, you agree to the terms and conditions</string>
    <string name="fragment_register_button_register_text">Register</string>

    <string name="fragment_email_update_text_view_request_hint">Enter your new email and instructions will be sent</string>
    <string name="fragment_email_update_button_request_text">Request</string>

    <string name="fragment_pass_update_text_view_request_hint">Enter your email and a new access card will be sent</string>
    <string name="fragment_pass_update_button_request_text">Request</string>

    <string name="menu_fragment_scps_more_title">More</string>
    <string name="menu_fragment_profile_more_title">More</string>
    <string name="menu_fragment_edit_profile_save_title">Save</string>
    <string name="menu_fragment_user_editor_send_title">Save Changes</string>

    <string name="alert_email_update_sent">Please check your new email to complete the update.</string>
    <string name="alert_pass_update_sent">Your new card has been sent to your email address.</string>
</resources>
